--- a/council_finance/templates/council_finance/god_mode.html
+++ b/council_finance/templates/council_finance/god_mode.html
@@ -73,6 +73,7 @@
       <th class="border px-2 py-1">Activity</th>
       <th class="border px-2 py-1">Button</th>
       <th class="border px-2 py-1">Action</th>
+      <th class="border px-2 py-1">Request</th>
       <th class="border px-2 py-1">Response</th>
       <th class="border px-2 py-1">Extra</th>
     </tr>
