Enhance God Mode activity log with JSON export

--- a/council_finance/templates/council_finance/god_mode.html
+++ b/council_finance/templates/council_finance/god_mode.html
@@ -76,6 +76,7 @@
       <th class="border px-2 py-1">Request</th>
       <th class="border px-2 py-1">Response</th>
       <th class="border px-2 py-1">Extra</th>
+      <th class="border px-2 py-1">JSON</th>
     </tr>
   </thead>
   <tbody id="activity-log-body"></tbody>
